z-index issue fixed

--- a/Battery Indicator/style.css
+++ b/Battery Indicator/style.css
@@ -1,41 +1,52 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+
+* {
     margin: 0;
     padding: 0;
+    font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
-body{
+
+.sec {
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.box{
+
+.box {
     position: relative;
     width: 250px;
     height: 350px;
     background-color: rgba(255, 255, 255, 0.1);
     box-shadow: 0 25px 50px rgba(0, 0, 0, 0.297);
+    border: 1px solid rgba(255, 255, 255, 0.1);
     z-index: 1;
+    backdrop-filter: blur(25px);
     display: flex;
-    /* backdrop-filter: blur(30px); */
     justify-content: center;
     align-items: center;
     border-radius: 15px;
 }
 
-.box::before,.box::after {
+.sec::before,
+.sec::after {
     content: "";
     position: absolute;
+    border-radius: 50%;
+}
+
+.sec::before {
     width: 240px;
     height: 240px;
-    z-index: 0;
-}
-.box::before {
     background: linear-gradient(#6cff47, #3d1046);
-    border-radius: 50%;
     transform: translate(-150px, -100px);
-  }
-.box::after {
+}
+
+.sec::after {
+    width: 240px;
+    height: 240px;
     background: linear-gradient(#f955e8, #0e045a);
-    border-radius: 50%;
     transform: translate(150px, 100px);
-  }
+}
